fix hover colors and button z-indexes

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,6 +1,7 @@
 $white: hsl(0, 0, 100%);
 $pale-blue: hsl(225, 100%, 94%);
 $bright-blue: hsl(245, 75%, 52%);
+$bright-blue-hover: hsl(245, 83%, 68%);
 $very-pale-blue: hsl(225, 100%, 98%);
 $desaturated-blue: hsl(224, 23%, 55%);
 $dark-blue: hsl(223, 47%, 23%);
